# AMAZE

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: harness.yml
.roles/: ROLE.md
.roles/operations/: reset-ops-reviewer.md  throughput-hint-captain.md
.roles/parliament/: bom-durability-auditor.md  build-readiness-auditor.md  safety-governance-steward.md
.roles/playtest/: simulation-evidence-analyst.md
.roles/puzzle-craft/: aha-graph-editor.md  phase-wave-planner.md  (+1 more)
components/: BEAT-PACKAGES.md  DEVICE-REVIEW.md  DEVICES.md  INVENTORY.md  KITS.md  MATERIALS.md  README.md  RELIABILITY.md  SOURCING.md  TECHNIQUES.md  VISUALS.md
docs/: behavior-testing.md  build-economics.md  group-game-axes.md  harness.md  learning-loop.md  puzzle-hopper.md  puzzle-phases.md  scene-beat-harness.md  session-duration.md  simulation-protocol.md  team-testing.md
personas/: README.md  anxious-participant.md  family-four.md  first-date-duo.md  floor-operator.md  mobile-builder.md  speedrun-enthusiasts.md  venue-booker.md
scoring/: RUBRIC.md
tools/amaze-harness/: Cargo.toml
tools/amaze-harness/src/: cli.rs  domain.rs  evidence.rs  lib.rs  main.rs  markdown.rs  room.rs  scenes.rs  sim.rs
tools/amaze-harness/src/commands/: bench.rs  catalog.rs  check.rs  lifecycle.rs  lint.rs  mod.rs  ops.rs  score.rs  simulation.rs  timing.rs  visuals.rs
tools/amaze-harness/src/domain/: build.rs  catalog.rs  docs.rs  evidence.rs  ops.rs  playtest.rs  scenes.rs
tools/amaze-harness/src/rules/: mod.rs  ops.rs  scoring.rs  simulation.rs  timing.rs  unlocks.rs  visual.rs
(+93 files in other folders)
