[package]
name = "amaze-harness"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "amaze"
path = "src/main.rs"

[dependencies]
mdpath = { git = "https://github.com/giodl73-repo/MDPATH.git" }
muddle-core = { git = "https://github.com/giodl73-repo/MUDDLE.git" }
rally-core = { git = "https://github.com/giodl73-repo/RALLY.git" }
