[package]
name = "amaze-harness"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "amaze"
path = "src/main.rs"

[[bin]]
name = "amaze-muddle"
path = "src/bin/amaze-muddle.rs"

[[bin]]
name = "amaze-prism-muddle"
path = "src/bin/amaze-prism-muddle.rs"

[[bin]]
name = "amaze-muddle-window"
path = "src/bin/amaze-muddle-window.rs"

[[bin]]
name = "amaze-muddle-macroquad"
path = "src/bin/amaze-muddle-macroquad.rs"

[dependencies]
macroquad = "0.4"
mdpath = { git = "https://github.com/giodl73-repo/MDPATH.git" }
muddle-cli = { git = "https://github.com/giodl73-repo/MUDDLE.git" }
muddle-core = { git = "https://github.com/giodl73-repo/MUDDLE.git" }
muddle-macroquad = { git = "https://github.com/giodl73-repo/MUDDLE.git" }
muddle-window = { git = "https://github.com/giodl73-repo/MUDDLE.git" }
rally-core = { git = "https://github.com/giodl73-repo/RALLY.git" }
